issue-489: fix ImmutableList.of(1, 2).stream() issue-520: fix isParentTypeDownCast throws IndexOutOfBoundsException